# mathnovel.github.io

./: README.md  _config.yml
AI/: The Bitter Lesson苦涩的教训-Richard Sutton.md  readme.md
AI/ML/: readme.md
AI/prompt/: AI和缺陷检测的一些记录.md  GPT 应用开发和思考.md
_includes/: footer.html
_layouts/: default.html
_posts/: 2025-11-11-hello-world.md  2025-11-27-Why We Need Solar Light Simulators.md  2025-11-27-为什么我们需要太阳光模拟仪.md  2025-11-28-Deep Learning for Smartphone Exterior Inspection – A Fast Method to Capture Training Photos.md  2025-11-28-深度学习检测手机外观-快速采集训练用的照片的方法.md  2025-12-02-Using Deep Learning to Detect Missing Components on Electronic Parts – How to Quickly and Efficiently Collect Large Batches of Images for Deep Learning Training.md  2025-12-02-qt程序捕捉崩溃的方法.md  2025-12-02-使用深度学习检测元器件是否缺失零件-怎么快速地批量采集深度学习训练用的图片.md  2025-12-03-使用opencv来评估图像清晰度md  2025-12-06-电脑控制多部手机同时拍照.md  2025-12-27-解析苹果公司产品图片的秘密.md  2026-01-20-国内外拍摄纯色背景的产品图片的技术分析.md
assets/img/: 1
mpc/: 04_optimization_mynote.md  05_unconstrainedControl_mynotes.md  06_CFTOC_mynote.md  1线性化.ipynb  2离散化.ipynb  readme.md
mpc/05/example5_1/: BatchImplement.cpp  RecursiveImplement.cpp  RecursiveImplement.h  example5_1.h
mpc/06CFTOC/: HW4_4.md  example1.md  example5_1.md  ternimal cost的PN的计算.md
mpc/06CFTOC/example5_1/: BatchImplement.h  CMakeLists.txt  example5_1.cpp
mpc/06CFTOC/exampleHW4_4/: CMakeLists.txt  main.cpp  mpc_controller.cpp  mpc_controller.h  plotter.cpp  plotter.h
mpc/util/: qpOASES.md
something/: control.md  something.md  xjapan.md
